src/components/header/Header.module.scss
@use 'variables' as *;
@use 'breakpoints' as *;

.logo {
  svg {
    width: 26px;
    height: 24px;
    @media (min-width: $min-width-tablet) {
      width: 45px;
      height: 42px;
    }
    path {
      fill: #fff;
    }
  }
}

.locale {
  padding-inline: 10px;
  &_btn {
    padding: 0;
  }
}

.localeSeparator {
  display: inline-block;
  margin-inline: 6px;
  font-size: 20px;
  line-height: 1;
  color: $color-yellow;
}

.large {
  font-size: 32px;
}

.navigation {
  flex-grow: 1;
  &_list {
    display: flex;
    gap: 0;
    align-items: center;
    justify-content: flex-end;
    @media (min-width: $breakpoint-laptop) {
      gap: 20px;
    }
  }
}

.header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding-block: 10px;
  @media (min-width: $min-width-tablet) {
    padding-block: 30px;
  }
  @include container();
}

.overlay {
  position: fixed;
  inset: 0;
  z-index: $z-overlay;
  background: $color-overlay;
  display: flex;
  align-items: stretch;
  justify-content: stretch;
}

.drawer {
  position: relative;
  width: 100%;
  height: 100dvh;
  background: $color-dark-bg;
  background-image: url('../../assets/img/bg/bg-mobile.png');
  overflow: auto;
  transform: translateY(-100%);
  opacity: 0;
  transition:
    transform $transition-base,
    opacity $transition-base;
  &.open {
    transform: translateY(0);
    opacity: 1;
    padding: $container-padding-mobile;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
  }
  &_nav {
    display: flex;
    flex-direction: column;
    text-align: center;
    flex-grow: 1;
    justify-content: center;
    gap: 40px;
  }
}

.socials {
  margin-top: 10px;
  margin-bottom: 20px;
}

.close_btn {
  position: absolute;
  top: 10px;
  right: 10px;
  width: 40px;
  height: 40px;
  border: 0;
  padding: 10px;
  background: transparent;
  color: $color-yellow;
  font-weight: 700;
  font-size: 24px;
}

.large {
  font-size: 32px;
}

